FullQa New/src/TrainIt!/objects/Training_Instructor__c.object
<CustomObject>
    <description>Custom Object to store all the available instructors that can teach the various course offerings.</description>
    <fields>
        <fullName>Address__c</fullName>
        <inlineHelpText>Address of Venue/Location</inlineHelpText>
        <label>Address</label>
        <length>75</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Alternate_Email__c</fullName>
        <inlineHelpText>Alternative email contact information</inlineHelpText>
        <label>Alternate Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Biography__c</fullName>
        <inlineHelpText>Detailed Background of Instructor</inlineHelpText>
        <label>Biography</label>
        <length>32000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <inlineHelpText>City of Venue/Location</inlineHelpText>
        <label>City</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <inlineHelpText>Country of Venue/Location</inlineHelpText>
        <label>Country</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_Active__c</fullName>
        <inlineHelpText>Date the Facility was first put into service.</inlineHelpText>
        <label>Date Active</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Inactive__c</fullName>
        <inlineHelpText>Date facility no longer available for use</inlineHelpText>
        <label>Date Inactive</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Department_Name__c</fullName>
        <inlineHelpText>Instructor&apos;s Department Name</inlineHelpText>
        <label>Department Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Department_Number__c</fullName>
        <inlineHelpText>Internal or Client Department number (for billing purposes)</inlineHelpText>
        <label>Department Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <inlineHelpText>Primary Email Address for Contact information.</inlineHelpText>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Employer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Lookup to Account table for employer name</inlineHelpText>
        <label>Employer</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Training_Instructors</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Employment_Relationship__c</fullName>
        <inlineHelpText>Picklist. What is the Relationship between Instructor and the Company?</inlineHelpText>
        <label>Employment Relationship</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Employee</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Contractor</fullName>
                </value>
                <value>
                    <fullName>Partner</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Fax__c</fullName>
        <inlineHelpText>Main Fax Number</inlineHelpText>
        <label>Fax</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Home_Phone__c</fullName>
        <inlineHelpText>Instructor&apos;s Home Telephone Number.</inlineHelpText>
        <label>Home Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>IsActive__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Checkbox to indicate whether a location is available for use</inlineHelpText>
        <label>IsActive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Mobile_Phone__c</fullName>
        <inlineHelpText>Mobile/Cell Telephone Number of the Instructor.</inlineHelpText>
        <label>Mobile Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Nickname__c</fullName>
        <inlineHelpText>Nickname or Alias for instructor</inlineHelpText>
        <label>Nickname</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <inlineHelpText>Main Telephone Number</inlineHelpText>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Photo__c</fullName>
        <inlineHelpText>Small Image photo of instructor</inlineHelpText>
        <label>Photo</label>
        <length>32000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Postal_Code__c</fullName>
        <inlineHelpText>Postal/Zip Code of Venue/Location</inlineHelpText>
        <label>Zip/Postal Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <inlineHelpText>State of Venue/Location</inlineHelpText>
        <label>State/Province</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <inlineHelpText>Job title of the Instructor.</inlineHelpText>
        <label>Title</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>Instructor</label>
    <listViews>
        <fullName>All_Active_Instructors</fullName>
        <columns>NAME</columns>
        <columns>Phone__c</columns>
        <columns>Email__c</columns>
        <columns>Mobile_Phone__c</columns>
        <columns>Employer__c</columns>
        <columns>City__c</columns>
        <columns>State__c</columns>
        <columns>Country__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>IsActive__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>All Active Instructors</label>
    </listViews>
    <listViews>
        <fullName>All_Inactive_Instructors</fullName>
        <columns>NAME</columns>
        <columns>Phone__c</columns>
        <columns>Email__c</columns>
        <columns>Mobile_Phone__c</columns>
        <columns>Employer__c</columns>
        <columns>City__c</columns>
        <columns>State__c</columns>
        <columns>Country__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>IsActive__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>All Inactive Instructors</label>
    </listViews>
    <listViews>
        <fullName>All_Instructors</fullName>
        <columns>NAME</columns>
        <columns>Phone__c</columns>
        <columns>Email__c</columns>
        <columns>Mobile_Phone__c</columns>
        <columns>Employer__c</columns>
        <columns>City__c</columns>
        <columns>State__c</columns>
        <columns>Country__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Instructors</label>
    </listViews>
    <listViews>
        <fullName>Modified_This_Week</fullName>
        <columns>NAME</columns>
        <columns>Phone__c</columns>
        <columns>Email__c</columns>
        <columns>Mobile_Phone__c</columns>
        <columns>Employer__c</columns>
        <columns>City__c</columns>
        <columns>State__c</columns>
        <columns>Country__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LAST_UPDATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>Modified This Week</label>
    </listViews>
    <listViews>
        <fullName>Modified_Today</fullName>
        <columns>NAME</columns>
        <columns>Phone__c</columns>
        <columns>Email__c</columns>
        <columns>Mobile_Phone__c</columns>
        <columns>Employer__c</columns>
        <columns>City__c</columns>
        <columns>State__c</columns>
        <columns>Country__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LAST_UPDATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <label>Modified Today</label>
    </listViews>
    <listViews>
        <fullName>New_This_Week</fullName>
        <columns>NAME</columns>
        <columns>Phone__c</columns>
        <columns>Email__c</columns>
        <columns>Mobile_Phone__c</columns>
        <columns>Employer__c</columns>
        <columns>City__c</columns>
        <columns>State__c</columns>
        <columns>Country__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
    </listViews>
    <listViews>
        <fullName>New_Today</fullName>
        <columns>NAME</columns>
        <columns>Phone__c</columns>
        <columns>Email__c</columns>
        <columns>Mobile_Phone__c</columns>
        <columns>Employer__c</columns>
        <columns>City__c</columns>
        <columns>State__c</columns>
        <columns>Country__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <label>New Today</label>
    </listViews>
    <nameField>
        <label>Instructor Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Instructors</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>